[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/ShinGo.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/AOTFShinGoProRegular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 2 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="Credits" type="Label" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -22.0
custom_fonts/font = ExtResource( 1 )
text = "Made by Nekode"

[node name="ButtonContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -38.334
margin_right = 97.0
margin_bottom = 123.666

[node name="Start" type="Button" parent="Panel/ButtonContainer"]
margin_right = 194.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Start"

[node name="Separator" type="HSeparator" parent="Panel/ButtonContainer"]
margin_top = 50.0
margin_right = 194.0
margin_bottom = 54.0

[node name="Options" type="Button" parent="Panel/ButtonContainer"]
margin_top = 58.0
margin_right = 194.0
margin_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="Separator2" type="HSeparator" parent="Panel/ButtonContainer"]
margin_top = 108.0
margin_right = 194.0
margin_bottom = 112.0

[node name="Quit" type="Button" parent="Panel/ButtonContainer"]
margin_top = 116.0
margin_right = 194.0
margin_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -149.0
margin_top = 71.0
margin_right = 149.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "KittyKana"

[connection signal="pressed" from="Panel/ButtonContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/Quit" to="." method="_on_Quit_pressed"]
